k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: real-home-data-backend
spec:
  selector:
    matchLabels:
      app: real-home-data-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: real-home-data-backend
    spec:
      containers:
        - name: real-home-data-backend
          image: us-docker.pkg.dev/real-data-now/gcr.io/real-home-data/backend:master
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
              ephemeral-storage: 1Gi
            limits:
              cpu: 500m
              memory: 1Gi
              ephemeral-storage: 1Gi
      volumes:
        - name: google-cloud-key
          secret:
            secretName: service-account-key
